Add initial push demo

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
     <script src="/scripts/script.js"></script>
 </head>
 <body>
-    This is the body
+    <button onclick="sendMessage('test')">Send message</button>
 </body>
 </html>
