Update CSS file name

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
 	<link rel="stylesheet" href="https://az813057.vo.msecnd.net/styles/fonts-full-20180102.css">
 	<link rel="stylesheet" href="styles/demo-template.css">
-	<link rel="stylesheet" href="styles/your-demo-name.css">
+	<link rel="stylesheet" href="styles/push-notifications.css">
 	<script src="/scripts/script.js"></script>
 </head>
 <body>
