--- a/src/index.html
+++ b/src/index.html
@@ -264,6 +264,7 @@ return outputArray;</code></pre>
 		</div>
     </footer>
     <script src="scripts/demo-template.js"></script>
+    <script src="/scripts/util.js"></script>
     <script src="/scripts/script.js"></script>
 </body>
 </html>
