--- a/src/index.html
+++ b/src/index.html
@@ -125,8 +125,8 @@
             <div class="l-contain">
                 <div class="l-flex--guide l-subsection">
                     <div class="guide-col-main">
-                        <p>To start, you’ll first need to make sure your web server is setup to send pushes. We’ll be using a node.js server and take advantage of the open-source web-push library so that we don’t have to worry about the encryption details involved with sending a push.</p>
-                        <p>We’ll need to specify the VAPID keys that will allow identifications between our app’s server and the notification server (e.g. Firebase Cloud Messaging (FCM), Mozilla Cloud Services (MCS), and Windows Push Notification Service (WNS) depending on which browser is being used). You only need to set up the VAPID keys once which can be generated easily:</p>
+                        <p>To start, you’ll first need to make sure your web server is setup to send pushes. We’ll be using a node.js server and take advantage of the open-source <a href="https://www.npmjs.com/package/web-push">web-push</a> library so that we don’t have to worry about the encryption details involved with sending a push.</p>
+                        <p>We’ll need to specify the VAPID keys that will allow identifications between our app’s server and the notification server (e.g. <a href="https://firebase.google.com/docs/cloud-messaging/">Firebase Cloud Messaging</a> (FCM), <a href="https://blog.mozilla.org/services/">Mozilla Cloud Services</a> (MCS), and <a href="https://docs.microsoft.com/en-us/windows/uwp/design/shell/tiles-and-notifications/windows-push-notification-services--wns--overview">Windows Push Notification Service</a> (WNS) depending on which browser is being used). You only need to set up the VAPID keys once which can be generated easily:</p>
 <pre><code>var webpush = require('web-push');
 console.log(webpush.generateVAPIDKeys());</code></pre>
                         <p>Once they’re generated, you can use them for as long as you need to by setting the vapidKeys variable to what you just got when calling <code>generateVAPIDKeys()</code>:</p>
@@ -206,7 +206,7 @@ outputArray[i] = rawData.charCodeAt(i);
 }
 
 return outputArray;</code></pre>
-                        <p>We’ll need to make sure that we have an active service worker before we attempt to subscribe for push. We can do this by using navigator.serviceWorker.ready which will resolve when a service worker is active.</p>
+                        <p>We’ll need to make sure that we have an active service worker before we attempt to subscribe for push. We can do this by using <code>navigator.serviceWorker.ready</code> which will resolve when a service worker is active.</p>
                     </div>
                 </div>
                 <div class="l-flex--guide--callout l-subsection">
@@ -219,8 +219,8 @@ return outputArray;</code></pre>
                 </div>
                 <div class="l-flex--guide l-subsection">
                     <div class="guide-col-main">
-                        <p>To create a push subscription, you’ll need to set the userVisibleOnly option to “true” – meaning a notification must be shown as a result of a push – and provide a valid applicationServerKey. If there is already a push subscription, there is no need to subscribe again. That said, we’ll want to first check if there’s an existing push subscription and use that first.</p>
-                        <p>At any point when a push is received by the client, a corresponding service worker is run to handle the push event. As part of this push handling, a notification must be shown so that the user understands that something is happening in the background. In the service worker (sw.js), we will handle the onpush event and show a notification:</p>
+                        <p>To create a push subscription, you’ll need to set the <code>userVisibleOnly</code> option to “true” – meaning a notification must be shown as a result of a push – and provide a valid <code>applicationServerKey</code>. If there is already a push subscription, there is no need to subscribe again. That said, we’ll want to first check if there’s an existing push subscription and use that first.</p>
+                        <p>At any point when a push is received by the client, a corresponding service worker is run to handle the push event. As part of this push handling, a notification must be shown so that the user understands that something is happening in the background. In the service worker (sw.js), we will handle the <code>onpush</code event and show a notification:</p>
 <pre><code>self.onpush = function(event) {
     event.waitUntil(
         registration.showNotification('WEATHER ADVISORY', {
@@ -229,7 +229,7 @@ return outputArray;</code></pre>
         })
     );
 } </code></pre>
-                        <p>After a notification is shown, there is still the matter of dealing with when it’s been clicked. As such, we need to have another event listener in the service worker that would handle this case. In the same service worker, we will handle the onnotificationclick event to close the notification and then open a new window for our site:</p>
+                        <p>After a notification is shown, there is still the matter of dealing with when it’s been clicked. As such, we need to have another event listener in the service worker that would handle this case. In the same service worker, we will handle the <code>onnotificationclick</code> event to close the notification and then open a new window for our site:</p>
 <pre><code>self.onnotificationclick = function(event) {
     event.notification.close();
     event.waitUntil(clients.openWindow('weather/advisory'));
@@ -251,12 +251,23 @@ return outputArray;</code></pre>
                 </div>
             </div>
         </section>
+        <section class="l-section">
+            <h2>Appendix</h2>
+            <div class="l-contain">
+                <div class="l-flex--guide l-subsection">
+                    <div class="guide-col-main">
+                        <p>The W3C <a href="https://w3c.github.io/push-api/">Push API</a> and <a href="https://notifications.spec.whatwg.org/">Notification API</a> go hand-in-hand to enable push notifications in modern browsers. The Push API is used to set up a push subscription and is invoked when a message is pushed to the corresponding service worker. The service worker then is responsible for showing a notification to the user using the Notification API and reacting to user interaction with the notification. </p>
+                        <p>A standardized method of message delivery is also important for the W3C Push API to work consistently across all major browsers where application servers will need to use multiple push services. For instance, Google Chrome and Mozilla Firefox use <a href="https://firebase.google.com/docs/cloud-messaging/">Firebase Cloud Messaging</a> (FCM) <a href="https://blog.mozilla.org/services/">and Mozilla Cloud Services</a> (MCS), respectively while Microsoft Edge relies on the <a href="https://docs.microsoft.com/en-us/windows/uwp/design/shell/tiles-and-notifications/windows-push-notification-services--wns--overview">Windows Push Notification Service</a> (WNS) to deliver push messages. To reach reasonable interoperability with other browsers’ messaging services, WNS has now deployed support for the <a href="https://datatracker.ietf.org/doc/rfc8030/">Web Push</a> protocols being finalized within IETF, as well as the <a href="https://datatracker.ietf.org/doc/rfc8291/">Message Encryption</a> spec and the <a href="https://datatracker.ietf.org/doc/rfc8292/">Voluntary Application Server Identification</a> (VAPID) spec for web push. Web developers can now use the Web Push APIs and service workers to provide an interoperable push service on the web.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
 	</main>
 	<footer class="l-section l-section--banner c-outro" role="contentinfo" aria-label="Demo credits">
 		<div class="l-contain">
 			<div class="c-outro__byline">
 				<p><a href="https://developer.microsoft.com/en-us/microsoft-edge/testdrive/" class="c-nav-bar__more">A demo</a> by Microsoft Edge</p>
-				<p>Contributors: <a href="">Ali Alabbas</a>, <a href="">Stephanie Drescher</a></p>
+				<p>Contributors: <a href="">Ali Alabbas</a>, <a href="">Stephanie Drescher</a>, <a href="">Anton Molleda</a></p>
 			</div>
 			<a href="[Github URL]" class="c-outro__github" aria-label="Explore code on Github">
 				<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"><path fill-rule="evenodd" clip-rule="evenodd" fill="#FFF" d="M10 .2C4.5.2 0 4.7 0 10.2c0 4.4 2.9 8.2 6.8 9.5.5.1.7-.2.7-.5v-1.7c-2.8.6-3.4-1.3-3.4-1.3-.4-1.1-1.1-1.5-1.1-1.5-.9-.6.1-.6.1-.6 1 .1 1.5 1 1.5 1 .9 1.6 2.4 1.2 2.9.9.1-.6.3-1.1.6-1.3-2.1-.3-4.5-1.1-4.5-5 0-1.1.4-2 1-2.7-.1-.2-.4-1.2.1-2.6 0 0 .8-.3 2.7 1 .9-.2 1.8-.3 2.6-.3s1.7.1 2.5.3c1.9-1.3 2.7-1 2.7-1 .5 1.4.2 2.4.1 2.6.6.7 1 1.6 1 2.7 0 3.8-2.3 4.7-4.6 4.9.4.3.7.9.7 1.9v2.7c0 .3.2.6.7.5 4-1.3 6.8-5.1 6.8-9.5.1-5.5-4.4-10-9.9-10z"/></svg><span>Explore code</span>
