Content edits, update banner message, add banner button, layout fixes

--- a/src/index.html
+++ b/src/index.html
@@ -46,10 +46,10 @@
 	<main role="main">
 		<div class="intro l-section--banner--dark-black">
             <section class="intro__section l-contain">
-                <h1 class="intro__heading">Push Notifications</h1>
+                <h1 class="intro__heading">Web Push Notifications</h1>
                 <img src="images/header-embellishment.svg" class="heading__image" role="presentation" alt="" />
                 <div class="intro__section__overview l-subsection" id="intro" data-nav-label="Introduction">
-                    <p class="highlight h3">Welcome to the future of the web……where push messages can help you achieve what apps have long been able to do.</p>
+                    <p class="highlight h3">Welcome to the future of the web &mdash; where push messages can help you achieve what apps have long been able to do.</p>
                     <div class="l-flex--guide l-subsection wrap">
                         <div class="guide-col-main--alt">
                             <p>It goes without saying that push notifications expand your reach to your users in a timely, power-efficient and dependable way. Users are re-engaged with customized and relevant content that will have them coming back for more.</p>
