add background to try it out section

--- a/src/index.html
+++ b/src/index.html
@@ -288,7 +288,7 @@ function urlBase64ToUint8Array(base64String) {
                 </div>
             </div>
         </section>
-        <section class="l-section--banner" id="try-it" data-nav-label="Try it out!">
+        <section class="l-section--banner moon-background" id="try-it" data-nav-label="Try it out!">
             <h2>Try it out!</h2>
             <div class="l-contain">
                 <div class="l-subsection l-flex--guide">
