--- a/src/index.html
+++ b/src/index.html
@@ -49,13 +49,15 @@
                 <h1 class="intro__heading">Web Push Notifications</h1>
                 <img src="images/header-embellishment.svg" class="heading__image" role="presentation" alt="" />
                 <div class="intro__section__overview l-subsection" id="intro" data-nav-label="Introduction">
-                    <p class="highlight h3">Welcome to the future of the web &mdash; where push messages can help you achieve what apps have long been able to do.</p>
+                    <p class="highlight h3">Welcome to the future of the web &mdash; where push messages can help you achieve better engagement for your site or web app.</p>
                     <div class="l-flex--guide l-subsection wrap">
                         <div class="guide-col-main--alt">
                             <p>It goes without saying that push notifications expand your reach to your users in a timely, power-efficient and dependable way. Users are re-engaged with customized and relevant content that will have them coming back for more.</p>
                             <p>Inspired by the parallels between basic astrological ideas and push notification architecture, come join us on this journey to better understand how to set up your site – both the front-end and the back-end – to send push messages to a user without needing the browser or app to be opened. You can fork this tutorial itself on <a href="https://github.com/MicrosoftEdge/pushnotifications-demo">GitHub</a> and even set it up locally so that you can play with it.</p>
-                            <p>To see it in action, click the button below, accept the permission prompt (if you haven’t already), and then immediately close this tab (or browser). You should get a notification within 5 seconds after clicking the button below. Don’t worry, when you click the notification, it’ll take you right back here, so you can continue learning about push messages. </p>
+                            <p>To see it in action, click the button below, accept the permission prompt (if you haven’t already), and then immediately close this tab (or browser). You should get a notification within 5 seconds after clicking the button below. Don’t worry, when you click the notification, it’ll take you right back here, so you can continue learning about push messages.</p>
                             <button class="btn--action" id="initiate-push" disabled="disabled">Initiating...</button>
+                            <p>Just so you know, after clicking the button above, you’ll be getting push message updates daily. If you prefer to stop getting these push messages, click below to unsubcribe.</p>
+                            <button class="btn--action" id="unsubscribe-push" disabled="disabled">Initiating...</button>
                         </div>
                         <div class="guide-col-side">
                             <img src="images/hero-image.svg" role="presentation" alt="" />
@@ -285,6 +287,8 @@ function urlBase64ToUint8Array(base64String) {
                         <p>You’re also able to sort through the already open windows and focus one of those, or perhaps even navigate an existing window.</p>
                         <p>It’s now time to give it a try! The button below will send a message to the application server to send along a push request to the push service’s server so that your machine can get a push notification.</p>
                         <button class="btn--action" id="initiate-push-2" disabled="disabled">Initiating...</button>
+                        <p>And again, after clicking the button above, you’ll be getting push message updates daily. If you prefer to stop getting these push messages, click below to unsubcribe.</p>
+                        <button class="btn--action" id="unsubscribe-push-2" disabled="disabled">Initiating...</button>
                         <p>As a reminder, you can check out a fully working version of this demo on the <a href="https://github.com/MicrosoftEdge/pushnotifications-demo">GitHub repo</a>.</p>
                     </div>
                 </div>
