Change index title

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
 	<meta charset="utf-8">
-	<title>Push Notifications Demo | Microsoft Edge Demos</title>
+	<title>Web Push Notifications Demo | Microsoft Edge Demos</title>
 	<meta name="viewport" content="width=device-width">
 	<meta name="og:title" content="Push Notifications">
 	<meta name="description" content="Push notifications can help you achieve what apps have long been able to do. Join us as we explore how to build the front-end and back-end of a push notification">
