create new section, content edits

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
                                 <img src="images/leo-server-side.svg" role="presentation" alt="" />
                             </div>
                             <div class="card--bottom">
-                                <p class="card--caption">If the signs of the zodiac were sending messages to those on a terrestrial plane, they would be the server side (and up in the cloud no less) of push notifications. The changing of celestial positions prompts an update for those on affected on earth.</p>
+                                <p class="card--caption">If the signs of the zodiac were sending messages to those on a terrestrial plane, they would be the server side (and up in the cloud no less) of push notifications.</p>
                             </div>
                         </div>
                         <div class="card card--left">
@@ -285,6 +285,15 @@ function urlBase64ToUint8Array(base64String) {
     event.waitUntil(clients.openWindow('weather/advisory'));
 });</code></pre>
                         <p>You’re also able to sort through the already open windows and focus one of those, or perhaps even navigate an existing window.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="l-section" id="does-it-work" data-nav-label="Make sure it all works">
+            <h2><span class="title-step">Step 3</span> Make sure it all works</h2>
+            <div class="l-contain">
+                <div class="l-flex--guide l-subsection">
+                    <div class="guide-col-main">
                         <p>It’s now time to give it a try! The button below will send a message to the application server to send along a push request to the push service’s server so that your machine can get a push notification.</p>
                         <button class="btn--action" id="initiate-push-2" disabled="disabled">Initiating...</button>
                         <p>And again, after clicking the button above, you’ll be getting push message updates daily. If you prefer to stop getting these push messages, click below to unsubcribe.</p>
@@ -294,7 +303,7 @@ function urlBase64ToUint8Array(base64String) {
                 </div>
             </div>
         </section>
-        <section class="l-section--banner moon-background" id="try-it" data-nav-label="Try it out!">
+        <section class="l-section l-section--banner moon-background" id="try-it" data-nav-label="Try it out!">
             <h2>Try it out!</h2>
             <div class="l-contain">
                 <div class="l-subsection l-flex--guide">
