--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 	<meta name="twitter:description" content="Push notifications can help you achieve what apps have long been able to do. Join us as we explore how to build the front-end and back-end of a push notification">
 	<meta name="twitter:image" content="images/social-image.jpg">
 
-	<meta property="og:title" content="Push Notifiations Demo">
+	<meta property="og:title" content="Push Notifications Demo">
 	<meta property="og:description" content="Push notifications can help you achieve what apps have long been able to do. Join us as we explore how to build the front-end and back-end of a push notification">
 	<meta property="og:site_name" content="Microsoft Edge Demos">
 	<meta property="og:locale" content="en_US">
